--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "scripts": {
     "prepare": "husky install",
     "dev": "npm run watch",
-    "watch": "tsc -w",
+    "watch": "npm run build -- -w",
     "lint": "flh --eslint --tscheck --prettier",
-    "build": "tsc -p tsconfig.json",
+    "build": "npm run clean && tsc -p tsconfig.json",
     "doc": "typedoc src/ --exclude **/*.spec.ts --out docs --tsconfig tsconfig.module.json",
     "version": "standard-version",
-    "dist": "npm run build && npm run doc",
+    "dist": "npm run build",
     "release": "npm run dist && npm run version",
-    "clean": "flh rm -rf ./cjs ./esm ./docs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "flh rm -f ./cjs ./esm ./docs",
+    "test": "npm run lint"
   },
   "bin": {
     "m3u8dl": "bin/m3u8dl.js"
@@ -51,10 +51,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "prettier": "^2.8.3",
+    "standard-version": "^9.5.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@lzwme/fe-utils": "^1.3.2",
+    "@lzwme/fe-utils": "^1.3.3",
     "commander": "^10.0.0",
     "console-log-colors": "^0.3.3",
     "m3u8-parser": "^6.0.0"
