--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://lzw.me"
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky || true",
     "dev": "npm run watch",
     "watch": "npm run build -- -- -w",
     "lint": "flh --eslint --tscheck --prettier",
@@ -44,20 +44,22 @@
     "registry": "https://registry.npmjs.com"
   },
   "devDependencies": {
-    "@lzwme/fed-lint-helper": "^2.5.2",
-    "@types/node": "^20.11.20",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
+    "@eslint/js": "^9.0.0",
+    "@lzwme/fed-lint-helper": "^2.6.0",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint": "^9.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
     "standard-version": "^9.5.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.6.0"
   },
   "dependencies": {
-    "@lzwme/fe-utils": "^1.6.0",
+    "@lzwme/fe-utils": "^1.7.2",
     "commander": "^12.0.0",
     "console-log-colors": "^0.4.0",
     "enquirer": "^2.4.1",
