--- a/package.json
+++ b/package.json
@@ -45,17 +45,21 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@lzwme/fed-lint-helper": "^2.6.6",
-    "@types/node": "^22.15.12",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.16",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
     "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.2",
+    "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-prettier": "^5.4.0",
+    "express": "^5.1.0",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "standard-version": "^9.5.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0"
+    "typescript-eslint": "^8.32.0",
+    "ws": "^8.18.2"
   },
   "dependencies": {
     "@lzwme/fe-utils": "^1.8.3",
