--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,3 +1,4 @@
+# doc: https://docs.github.com/en/actions/use-cases-and-examples/publishing-packages/publishing-docker-images
 name: 'Publish Container Image'
 
 on:
@@ -12,6 +13,7 @@ env:
   REGISTRY: ${{ secrets.REGISTRY }}
   # github.repository as <account>/<repo>
   IMAGE_NAME: renxia/m3u8-dl # ${{ github.repository }}
+  IMAGE_NAME_REPO: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
@@ -42,7 +44,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
@@ -51,7 +53,7 @@ jobs:
         with:
           images: |
             ${{ env.IMAGE_NAME }}
-            ghcr.io/${{ env.IMAGE_NAME }}
+            ghcr.io/${{ env.IMAGE_NAME_REPO }}
           # generate Docker tags based on the following events/attributes
           #   nightly, main, pr-2, 1.2.3, 1.2, 1
           flavor: |
@@ -78,7 +80,6 @@ jobs:
         with:
           build-args: |
             MAINTAINER=${{ github.repository_owner }}
-            QL_BRANCH=${{ github.ref_name }}
             SOURCE_COMMIT=${{ github.sha }}
           network: host
           platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64 # ,linux/ppc64le,linux/386
@@ -90,13 +91,13 @@ jobs:
           cache-from: type=registry,ref=renxia/meu8-dl:cache
           cache-to: type=registry,ref=renxia/meu8-dl:cache,mode=max
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          # subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          subject-name: ghcr.io/${{ env.IMAGE_NAME}}
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
+      # - name: Generate artifact attestation
+      #   uses: actions/attest-build-provenance@v2
+      #   with:
+      #     # subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+      #     subject-name: ghcr.io/${{ env.IMAGE_NAME_REPO }}
+      #     subject-digest: ${{ steps.push.outputs.digest }}
+      #     push-to-registry: true
 
       - name: Image digest
         run: |
