perf: 更新访问密码的相关逻辑及说明

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,11 +22,13 @@ ARG MAINTAINER="renxia"
 LABEL maintainer="${MAINTAINER}"
 ARG DS_PORT=6600
 ARG DS_DEBUG=
+ARG DS_SECRET=
 ARG DS_SAVE_DIR=/app/downloads
 ARG DS_CACHE_DIR=/app/cache
 
 ENV DS_PORT=${DS_PORT} \
   DS_DEBUG=${DS_DEBUG} \
+  DS_SECRET=${DS_SECRET} \
   DS_SAVE_DIR=${DS_SAVE_DIR} \
   DS_CACHE_DIR=${DS_CACHE_DIR} \
   LANG=C.UTF-8 \
