--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       DS_PORT: '6600'
       DS_SAVE_DIR: '/app/downloads'
       DS_CACHE_DIR: '/app/cache'
+      DS_SECRET: '' # 设置访问密码
       DS_DEBUG: ''
     # command: >
     #   sh -c "node cjs/server/index.js"
