--- a/package.json
+++ b/package.json
@@ -43,27 +43,28 @@
     "registry": "https://registry.npmjs.com"
   },
   "devDependencies": {
-    "@eslint/js": "^9.27.0",
+    "@eslint/js": "^9.28.0",
     "@lzwme/fed-lint-helper": "^2.6.6",
     "@types/express": "^5.0.2",
-    "@types/node": "^22.15.18",
+    "@types/m3u8-parser": "^7.2.2",
+    "@types/node": "^22.15.29",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^9.27.0",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-prettier": "^5.4.1",
     "express": "^5.1.0",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "standard-version": "^9.5.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
+    "typescript-eslint": "^8.33.0",
     "ws": "^8.18.2"
   },
   "dependencies": {
     "@lzwme/fe-utils": "^1.9.0",
-    "commander": "^13.1.0",
+    "commander": "^14.0.0",
     "console-log-colors": "^0.5.0",
     "enquirer": "^2.4.1",
     "m3u8-parser": "^7.2.0"
