chore: 使用 biome 作为 lint 工具

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prepare": "husky || true",
     "dev": "npm run watch",
     "watch": "npm run build -- -- -w",
-    "lint": "flh --eslint --tscheck --prettier",
+    "lint:flh": "flh --eslint --tscheck --prettier",
+    "lint": "biome lint src",
     "build": "npm run clean && npm run build:cjs",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "doc": "typedoc src/ --exclude **/*.spec.ts --out docs --tsconfig tsconfig.module.json",
