--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 .grs.config.js
 npm-debug.log
 .DS_Store
-/release/
+release
 /debug/
-/dist/
+dist
 /esm
 /cjs
 /docs
-/downloads
-/cache
+downloads
+cache
 tmp
 coverage
 package-lock.json
