--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
-registry=https://registry.npmmirror.com
+
+# registry="https://registry.npmmirror.com"
+# for pnpm
 strict-peer-dependencies=false
+shamefully-hoist=true
