--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@lzwme/fed-lint-helper": "^2.6.6",
     "@types/express": "^5.0.3",
     "@types/m3u8-parser": "^7.2.2",
-    "@types/node": "^22.15.30",
+    "@types/node": "^24.0.0",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
@@ -73,7 +73,9 @@
   },
   "files": [
     "cjs",
-    "client",
+    "client/",
+    "!client/ariang",
+    "!client/local",
     "!cjs/type.js",
     "!cjs/cli.d.ts",
     "bin"
