--- a/packages/m3u8dl-app/package.json
+++ b/packages/m3u8dl-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "m3u8dl-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "m3u8 download app",
   "main": "main.js",
   "type": "commonjs",
   "private": true,
@@ -10,6 +10,7 @@
     "build": "node build/build-app.cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "https://github.com/lzwme/m3u8-dl.git",
   "author": {
     "name": "renxia",
     "email": "lzwy0820@qq.com",
