perf: APP支持新版版本检测、自动升级

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,11 @@ name: Release
 
 on:
   workflow_dispatch:
-    # inputs:
-    #   tag:
-    #     description: 'Release tag (e.g. v1.0.0)'
-    #     required: true
-    #     default: 'v1.0.0'
+    inputs:
+      tag:
+        description: 'Release tag (e.g. v1.0.0)'
+        required: true
+        default: 'v1.3.0'
   push:
     tags:
       - v*.*.*
@@ -83,7 +83,7 @@ jobs:
           npm run build -- --linux
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RENDERER_VITE_AIHUBMIX_SECRET: ${{ vars.RENDERER_VITE_AIHUBMIX_SECRET }}
+          # RENDERER_VITE_AIHUBMIX_SECRET: ${{ vars.RENDERER_VITE_AIHUBMIX_SECRET }}
           NODE_OPTIONS: --max-old-space-size=8192
 
       - name: Build Mac
@@ -93,12 +93,12 @@ jobs:
           npm install --no-package-lock
           npm run build -- --mac
         env:
-          CSC_LINK: ${{ secrets.CSC_LINK }}
-          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
-          APPLE_ID: ${{ vars.APPLE_ID }}
-          APPLE_APP_SPECIFIC_PASSWORD: ${{ vars.APPLE_APP_SPECIFIC_PASSWORD }}
-          APPLE_TEAM_ID: ${{ vars.APPLE_TEAM_ID }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # CSC_LINK: ${{ secrets.CSC_LINK }}
+          # CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
+          # APPLE_ID: ${{ vars.APPLE_ID }}
+          # APPLE_APP_SPECIFIC_PASSWORD: ${{ vars.APPLE_APP_SPECIFIC_PASSWORD }}
+          # APPLE_TEAM_ID: ${{ vars.APPLE_TEAM_ID }}
+          # GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_OPTIONS: --max-old-space-size=8192
 
       - name: Build Windows
@@ -118,6 +118,6 @@ jobs:
           allowUpdates: true
           makeLatest: false
           tag: ${{ steps.get-tag.outputs.tag }}
-          # artifacts: 'packages/m3u8dl-app/dist/app/*.exe,packages/m3u8dl-app/dist/app/*.zip,packages/m3u8dl-app/dist/app/*.dmg,packages/m3u8dl-app/dist/app/*.AppImage,packages/m3u8dl-app/dist/app/*.snap,packages/m3u8dl-app/dist/app/*.deb,packages/m3u8dl-app/dist/app/*.rpm,packages/m3u8dl-app/dist/app/*.tar.gz,packages/m3u8dl-app/dist/app/latest*.yml,packages/m3u8dl-app/dist/app/rc*.yml,packages/m3u8dl-app/dist/app/*.blockmap'
-          artifacts: 'packages/m3u8dl-app/dist/app/*.{exe,zip,dmg,AppImage,deb,rpm,tar.gz,snap,yml,tar.gz,blockmap},packages/m3u8dl-app/dist/app/{latest,rc}*.yml'
+          artifacts: 'packages/m3u8dl-app/dist/app/*.exe,packages/m3u8dl-app/dist/app/*.zip,packages/m3u8dl-app/dist/app/*.7z,packages/m3u8dl-app/dist/app/*.dmg,packages/m3u8dl-app/dist/app/*.AppImage,packages/m3u8dl-app/dist/app/*.snap,packages/m3u8dl-app/dist/app/*.deb,packages/m3u8dl-app/dist/app/*.rpm,packages/m3u8dl-app/dist/app/*.tar.gz,packages/m3u8dl-app/dist/app/latest*.yml,packages/m3u8dl-app/dist/app/rc*.yml,packages/m3u8dl-app/dist/app/*.blockmap'
+          # artifacts: 'packages/m3u8dl-app/dist/app/*.{exe,zip,dmg,AppImage,deb,rpm,tar.gz,snap,yml,tar.gz,blockmap},packages/m3u8dl-app/dist/app/{latest,rc}*.yml'
           token: ${{ secrets.GITHUB_TOKEN }}
