fix: 修复视频播放失败的问题；DLServer 增加 limitFileAccess 参数，支持配置 localplay 是否允许访问外部目录文件

--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,19 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["**/node_modules/**", "dist/**", "cjs/**", "esm/**", "docs/**", "mock/**", "**/*.js", "**/*.d.ts"],
-    "include": ["src/**/*.ts"]
+    "includes": [
+      "src/**/*.ts",
+      "!**/node_modules/**",
+      "!**/dist/**",
+      "!**/cjs/**",
+      "!**/esm/**",
+      "!**/docs/**",
+      "!**/mock/**",
+      "!**/*.js",
+      "!**/*.d.ts"
+    ]
   },
   "formatter": {
     "enabled": true,
@@ -17,7 +26,7 @@
     "attributePosition": "auto",
     "bracketSpacing": true
   },
-  "organizeImports": { "enabled": true },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
     "enabled": true,
     "rules": {
@@ -26,12 +35,29 @@
         "noForEach": "off",
         "noStaticOnlyClass": "off"
       },
+      "correctness": {
+        "noUnusedVariables": {
+          "level": "error",
+          "options": {
+            "ignoreRestSiblings": true
+          }
+        }
+      },
       "nursery": {},
       "performance": {
         "noDelete": "off"
       },
       "style": {
-        "noParameterAssign": "off"
+        "noParameterAssign": "off",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       },
       "suspicious": {
         "noConfusingVoidType": "off"
