--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,6 +25,7 @@ ARG DS_DEBUG=
 ARG DS_SECRET=
 ARG DS_SAVE_DIR=/app/downloads
 ARG DS_CACHE_DIR=/app/cache
+ARG DS_LIMTE_FILE_ACCESS=1
 
 ENV DS_PORT=${DS_PORT} \
   DS_DEBUG=${DS_DEBUG} \
