--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       DS_CACHE_DIR: '/app/cache'
       DS_SECRET: '' # 设置访问密码
       DS_DEBUG: ''
+      DS_LIMTE_FILE_ACCESS: '1'
     # command: >
     #   sh -c "node cjs/server/index.js"
     restart: unless-stopped
