perf(getM3u8Urls): 新增 subUrlRegex 参数，增强从视频列表页批量提取播放地址能力

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,8 +23,9 @@
     "public/**": true,
     "**/cjs/**": true,
     "**/esm/**": true,
-    "**/mock/**": true,
-    "**/cache/**": true
+    "**/local/**": true,
+    "**/cache/**": true,
+    "**/dist/**": true
   },
   "git.rebaseWhenSync": true,
   "[json]": {
