feat(ffmpeg): add option to use built-in ffmpeg-static
Add a new CLI option `--use-ffmpeg-static` to allow using the bundled ffmpeg-static binary instead of requiring a system-installed ffmpeg. This improves portability and ease of use, especially in environments where ffmpeg is not pre-installed.

The changes include:
- Adding ffmpeg-static as a dependency in package.json
- Updating the CLI to accept the new option
- Modifying conversion and download logic to conditionally use the static binary
- Enhancing the isSupportFfmpeg utility to accept a custom binary path
- Extending the options interface to include the new flag

This feature defaults to false, maintaining backward compatibility.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "commander": "^14.0.0",
     "console-log-colors": "^0.5.0",
     "enquirer": "^2.4.1",
+    "ffmpeg-static": "^5.2.0",
     "m3u8-parser": "^7.2.0"
   },
   "files": [
