--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,12 +26,14 @@ ARG DS_SECRET=
 ARG DS_SAVE_DIR=/app/downloads
 ARG DS_CACHE_DIR=/app/cache
 ARG DS_LIMTE_FILE_ACCESS=1
+ARG DS_USE_GLOBAL_FFMPEG=1
 
 ENV DS_PORT=${DS_PORT} \
   DS_DEBUG=${DS_DEBUG} \
   DS_SECRET=${DS_SECRET} \
   DS_SAVE_DIR=${DS_SAVE_DIR} \
   DS_CACHE_DIR=${DS_CACHE_DIR} \
+  DS_USE_GLOBAL_FFMPEG=${DS_USE_GLOBAL_FFMPEG} \
   LANG=C.UTF-8 \
   SHELL=/bin/bash \
   PS1="\u@\h:\w \$ " \
