--- a/biome.json
+++ b/biome.json
@@ -1,16 +1,17 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.3.4/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
   "files": {
     "ignoreUnknown": false,
     "includes": [
       "src/**/*.ts",
-      "!**/node_modules/**",
-      "!**/dist/**",
-      "!**/cjs/**",
-      "!**/esm/**",
-      "!**/docs/**",
-      "!**/mock/**",
+      "!**/node_modules",
+      "!**/dist",
+      "!**/cjs",
+      "!**/esm",
+      "!**/docs",
+      "!**/mock",
+      "!**/client",
       "!**/*.js",
       "!**/*.d.ts"
     ]
