--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "dev": "npm run watch",
     "watch": "npm run build -- -- -w",
     "lint:flh": "flh --eslint --tscheck --prettier",
-    "lint": "biome lint src",
-    "build": "npm run clean && npm run build:cjs",
+    "lint": "biome lint",
+    "format": "biome format --write",
+    "fix": "biome check --fix",
+    "build": "npm run clean && npm run build:cjs && npm run build:frontend",
     "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:frontend": "pnpm -F @lzwme/m3u8-dl-frontend build",
     "doc": "typedoc src/ --exclude **/*.spec.ts --out docs --tsconfig tsconfig.module.json",
     "version": "standard-version",
     "dist": "npm run build",
     "release": "npm run dist && npm run version",
-    "clean": "flh rm -f ./cjs ./esm ./docs",
+    "clean": "flh rm -f ./cjs ./esm ./docs ./client/assets",
     "test": "npm run lint"
   },
   "bin": {
@@ -44,29 +47,29 @@
     "registry": "https://registry.npmjs.com"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.2",
-    "@eslint/js": "^9.34.0",
+    "@biomejs/biome": "^2.3.4",
+    "@eslint/js": "^9.39.1",
     "@lzwme/fed-lint-helper": "^2.6.6",
-    "@types/express": "^5.0.3",
-    "@types/m3u8-parser": "^7.2.3",
-    "@types/node": "^24.3.0",
+    "@types/express": "^5.0.5",
+    "@types/m3u8-parser": "^7.2.5",
+    "@types/node": "^24.10.0",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
-    "eslint": "^9.34.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "express": "^5.1.0",
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "standard-version": "^9.5.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.41.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.3",
     "ws": "^8.18.3"
   },
   "dependencies": {
-    "@lzwme/fe-utils": "^1.9.0",
-    "commander": "^14.0.0",
+    "@lzwme/fe-utils": "^1.9.2",
+    "commander": "^14.0.2",
     "console-log-colors": "^0.5.0",
     "enquirer": "^2.4.1",
     "ffmpeg-static": "^5.2.0",
