--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,10 +3,6 @@
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "eamodio.gitlens",
-        "ms-ceintl.vscode-language-pack-zh-hans",
-        "naumovs.color-highlight",
-        "editorconfig.editorconfig",
-        "mariusalchimavicius.json-to-ts",
-        "stylelint.vscode-stylelint"
+        "editorconfig.editorconfig"
     ]
 }
