--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,18 +14,19 @@
     "fix": "biome check --fix"
   },
   "dependencies": {
+    "pinia": "^3.0.4",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3",
-    "pinia": "^3.0.4"
+    "vue-i18n": "^9.14.5",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.2",
-    "tailwindcss": "^4.1.17",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^24.10.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "@types/node": "^24.10.0"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2"
   }
 }
