--- a/packages/m3u8dl-app/package.json
+++ b/packages/m3u8dl-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lzwme/m3u8-dl-app",
   "version": "1.0.0",
-  "description": "m3u8 download app",
+  "description": "M3U8 Downloader App",
   "main": "src/main.js",
   "type": "commonjs",
   "private": true,
