feat: enhance development experience and add version check functionality

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "scripts": {
     "prepare": "husky || true",
-    "dev": "npm run watch",
-    "watch": "npm run build -- -- -w",
+    "dev": "concurrently \"pnpm dev:sdk\" \"pnpm dev:server\" \"pnpm dev:frontend\"",
+    "dev:sdk": "tsc -p tsconfig.cjs.json --watch",
+    "dev:frontend": "pnpm -F @lzwme/m3u8-dl-frontend dev",
+    "dev:app": "pnpm -F @lzwme/m3u8-dl-app dev",
+    "dev:server": "nodemon bin/m3u8dl.js server --debug",
     "lint:flh": "flh --eslint --tscheck --prettier",
     "lint": "biome lint",
     "format": "biome format --write",
@@ -60,11 +63,13 @@
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "express": "^5.1.0",
     "husky": "^9.1.7",
+    "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "standard-version": "^9.5.0",
     "typescript": "^5.9.3",
