feat: update package dependencies, enhance README, and improve language support for i18n

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lzwme/m3u8-dl",
   "version": "1.6.0-0",
-  "description": "Batch download of m3u8 files and convert to mp4",
+  "description": "A free, open-source, and powerful m3u8 video batch downloader with multi-threaded downloading, play-while-downloading, WebUI management, video parsing, and more.",
   "main": "cjs/index.js",
   "types": "cjs/index.d.ts",
   "license": "MIT",
@@ -54,26 +54,26 @@
     "registry": "https://registry.npmjs.com"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.4",
+    "@biomejs/biome": "^2.3.5",
     "@eslint/js": "^9.39.1",
     "@lzwme/fed-lint-helper": "^2.6.6",
     "@types/express": "^5.0.5",
     "@types/m3u8-parser": "^7.2.5",
     "@types/node": "^24.10.0",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.3",
-    "@typescript-eslint/parser": "^8.46.3",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "express": "^5.1.0",
     "husky": "^9.1.7",
-    "nodemon": "^3.1.10",
+    "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
     "standard-version": "^9.5.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.3",
+    "typescript-eslint": "^8.46.4",
     "ws": "^8.18.3"
   },
   "dependencies": {
