--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+!*/
 .grs.config.js
 npm-debug.log
 .DS_Store
@@ -26,5 +27,9 @@ tsCheckWhiteList.json
 *.m3u8
 # /*(^.d).ts
 /*.mp4
-/client/
-!/client/local/cdn/font-awesome
+/client/*.html
+/client/logo.png
+/client/ariang/
+/client/assets/
+/client/local/cdn/
+!/client/local/cdn/font-awesome/
