refactor: improve media handling and UI interactions in m3u8 capture script; enhance clipboard functionality and integrate global download dialog

--- a/biome.json
+++ b/biome.json
@@ -5,14 +5,14 @@
     "ignoreUnknown": false,
     "includes": [
       "src/**/*.ts",
+      "client/*.user.js",
+      "!client/{local,assets,ariang}",
       "!**/node_modules",
       "!**/dist",
       "!**/cjs",
       "!**/esm",
       "!**/docs",
       "!**/mock",
-      "!**/client",
-      "!**/*.js",
       "!**/*.d.ts"
     ]
   },
