--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "lint": "biome lint",
     "format": "biome format --write",
     "fix": "biome check --fix",
-    "build": "npm run clean && npm run build:cjs && npm run build:frontend",
+    "build": "npm run clean && npm run build:cjs && npm run build:frontend && npm run build:capture",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:frontend": "pnpm -F @lzwme/m3u8-dl-frontend build",
+    "build:capture": "pnpm -F @lzwme/m3u8-capture build",
     "download-cdn": "node scripts/download-cdn-resources.js",
     "doc": "typedoc src/ --exclude **/*.spec.ts --out docs --tsconfig tsconfig.module.json",
     "version": "standard-version",
