--- a/packages/frontend/tsconfig.node.json
+++ b/packages/frontend/tsconfig.node.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "strict": true,
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
   },
   "include": ["vite.config.ts"]
 }
