--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dev:server": "nodemon bin/m3u8dl.js server --debug",
     "lint:flh": "flh --eslint --tscheck --prettier",
     "lint": "biome lint",
+    "lint:all": "biome lint && pnpm -F @lzwme/m3u8-capture lint && pnpm -F @lzwme/m3u8-dl-frontend lint",
     "format": "biome format --write",
     "fix": "biome check --fix",
     "build": "npm run clean && npm run build:cjs && npm run build:frontend && npm run build:capture",
