--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -10,6 +10,9 @@ on:
       - preset
       - .vscode
       - test
+      - .github/**
+      - docker/**
+      - client/**
   pull_request:
     branches:
       - '**'
