--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,18 +8,18 @@ ARG USE_PREBUILT=false
 COPY . .
 
 # 如果使用预构建产物且产物已存在，直接使用；否则执行构建
-RUN if [ "$USE_PREBUILT" = "true" ] && [ -d "/app/cjs" ] && [ -d "/app/client" ] && [ -f "/app/package.json" ]; then \
+RUN if [ "$USE_PREBUILT" = "true" ] && [ -d "/app/cjs" ] && [ -d "/app/client/ariang" ] && [ -f "/app/package.json" ]; then \
       echo "Using prebuilt artifacts (cjs and client directories found)..."; \
       echo "Skipping build steps"; \
     else \
       echo "Building from source..."; \
       apk update && apk add wget unzip && \
       npm i -g pnpm && \
+      pnpm add -P express ws && \
       pnpm install && \
-      # pnpm add -P express ws && \
       pnpm build && \
       pnpm download-cdn && \
-      wget https://github.com/mayswind/AriaNg/releases/download/1.3.10/AriaNg-1.3.10-AllInOne.zip -O ariang.zip && \
+      wget https://github.com/mayswind/AriaNg/releases/download/1.3.11/AriaNg-1.3.11-AllInOne.zip -O ariang.zip && \
       unzip ariang.zip -d /app/client/ariang && \
       rm ariang.zip; \
     fi
@@ -59,8 +59,8 @@ COPY --from=builder /app/client /app/client
 COPY --from=builder /app/cjs /app/cjs
 
 # 安装生产依赖，并额外安装 express 和 ws（它们在 devDependencies 中但运行时需要）
-RUN npm install --production && \
-    npm install express ws
+RUN npm install --omit dev
+RUN npm install express ws
 
 # Install FFmpeg
 RUN apk update && apk add ffmpeg
