--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "outDir": "esm",
     "target": "ESNext",
+    "moduleResolution": "NodeNext",
     "module": "NodeNext"
   },
   "include": ["src/**/*.ts"],
