fix: update platforms in docker-deploy.yml

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -168,7 +168,7 @@ jobs:
             MAINTAINER=${{ github.repository_owner }}
             SOURCE_COMMIT=${{ github.sha }}
             USE_PREBUILT=true
-          # platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
           context: .
           file: ./docker/Dockerfile
           push: true
