feat: add m3u8-dl portal with Vue 3, TypeScript, and Tailwind CSS; implement multi-language support, system detection for downloads, and SEO enhancements

--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "lint:all": "biome lint && pnpm -F @lzwme/m3u8-capture lint && pnpm -F @lzwme/m3u8-dl-frontend lint",
     "format": "biome format --write",
     "fix": "biome check --fix",
+    "fix:all": "biome check --fix && pnpm -F @lzwme/m3u8-capture fix && pnpm -F @lzwme/m3u8-dl-frontend fix && pnpm -F @lzwme/m3u8-dl-portal fix",
     "build": "npm run clean && npm run build:cjs && npm run build:frontend && npm run build:capture",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:frontend": "pnpm -F @lzwme/m3u8-dl-frontend build",
     "build:capture": "pnpm -F @lzwme/m3u8-capture build",
     "download-cdn": "node scripts/download-cdn-resources.js",
-    "doc": "typedoc src/ --exclude **/*.spec.ts --out docs --tsconfig tsconfig.module.json",
+    "doc": "pnpm doc:api && pnpm doc:portal",
+    "doc:api": "typedoc src --tsconfig tsconfig.module.json",
+    "doc:portal": "pnpm -F @lzwme/m3u8-dl-portal build",
     "version": "standard-version",
     "dist": "npm run build",
     "release": "npm run dist && npm run version",
